syntax = "proto3";

package net.devh.boot.grpc.example;
option java_multiple_files = true;
option java_outer_classname = "AuthProto";
option java_package = "com.microservice.auth_proto";

service AuthService {
  rpc doAuthenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc doIdentity(IdentityRequest) returns (IdentityResponse);
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateResponse {
  bool isValid = 1;
  string userId = 2;
  int64 ttl = 3;
}

message IdentityRequest {
  int32 userId = 1;
}

message IdentityResponse {
  bool active = 1;
  string roles = 2;
}